<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="10dp"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="20dp"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:text="Nombre 1:"
        android:textSize="22dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="217dp"
        android:background="@drawable/text_view_style"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/text_view_style"
            android:ems="10"
            android:text="0"
            android:inputType="number"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="10dp"
            android:text="Nombre 2:"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/edit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/text_view_style"
            android:ems="10"
            android:text="0"
            android:inputType="number"
            android:padding="10dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_style"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/text_view_style"
            android:ems="10"
            android:inputType="text"
            android:padding="1dp"
            android:text="@string/res" />

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/text_view_style"
            android:padding="10dp"
            android:text="0"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:background="@drawable/text_view_style"
        android:orientation="vertical">

        <Button
            android:id="@+id/addition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/text_view_style"
            android:fontFamily="sans-serif-medium"
            android:padding="1dp"
            android:text="@string/adit"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/sous"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/text_view_style"
            android:fontFamily="sans-serif-medium"
            android:padding="1dp"
            android:text="@string/sous"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/mult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/text_view_style"
            android:fontFamily="sans-serif-medium"
            android:padding="1dp"
            android:text="@string/mult"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:id="@+id/division"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/text_view_style"
            android:fontFamily="sans-serif-medium"
            android:padding="1dp"
            android:text="@string/div"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </LinearLayout>

</LinearLayout>
